<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyConverter">

    <EditText
        android:id="@+id/input_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:hint="Enter value"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/m_square_to_cm_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_value"
        android:layout_marginStart="148dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="153dp"
        android:gravity="center"
        android:text="m² to cm²"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_value" />

    <Button
        android:id="@+id/km_square_to_m_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/m_square_to_cm_square"
        android:layout_marginStart="148dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="153dp"
        android:text="km² to m²"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_square_to_cm_square" />

    <Button
        android:id="@+id/cm_square_to_m_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/km_square_to_m_square"
        android:layout_marginStart="148dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="153dp"
        android:text="cm² to m²"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/km_square_to_m_square" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cm_square_to_m_square"
        android:layout_marginTop="84dp"
        android:text="Result"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cm_square_to_m_square" />

</androidx.constraintlayout.widget.ConstraintLayout>
